chore(fonts): replace Digital-7 with OpenType-compatible version to fix numeric glyph shifting

--- a/src/components/XOGame/SinglePlayerUI/PowerUps/PlayerScore/PlayerScore.module.scss
+++ b/src/components/XOGame/SinglePlayerUI/PowerUps/PlayerScore/PlayerScore.module.scss
@@ -57,4 +57,5 @@
   font-family: "digital7";
   font-size: 1.2rem;
   letter-spacing: 1px;
+  font-variant-numeric: tabular-nums;
 }
