--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -66,10 +66,10 @@
   font-display: swap;
 }
 
-/* Digital7 */
+/* digital7 */
 @font-face {
   font-family: 'digital7';
-  src: url('/fonts/digital-7/digital-7.ttf') format('truetype');
+  src: url('/fonts/digital-7/digital-7-mono.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
